--- a/_manuscript/_tex/EPDS_1A_2C25_Trabajo_de_simulación_III.tex
+++ b/_manuscript/_tex/EPDS_1A_2C25_Trabajo_de_simulación_III.tex
@@ -180,7 +180,7 @@
 \makeatletter
 \makeatother
 \makeatletter
-\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[interior hidden, sharp corners, frame hidden, enhanced, breakable, borderline west={3pt}{0pt}{shadecolor}, boxrule=0pt]}{\end{tcolorbox}}\fi
+\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[breakable, boxrule=0pt, enhanced, frame hidden, interior hidden, sharp corners, borderline west={3pt}{0pt}{shadecolor}]}{\end{tcolorbox}}\fi
 \makeatother
 \usepackage{bookmark}
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
@@ -792,7 +792,7 @@ Generando 10,000 muestras bootstrap...Completado
 
 [INTERVALOS DE CONFIANZA 95%]
 Contractors: [$2,452.83, $2,877.36] USD
-Staff:       [$2,094.34, $2,207.55] USD
+Staff:       [$2,094.34, $2,208.49] USD
 
 --------------------------------------------------------------------------------
 Los intervalos NO se solapan
