--- a/_manuscript/_tex/EPDS_1A_2C25_Trabajo_de_simulación_III.tex
+++ b/_manuscript/_tex/EPDS_1A_2C25_Trabajo_de_simulación_III.tex
@@ -180,7 +180,7 @@
 \makeatletter
 \makeatother
 \makeatletter
-\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[breakable, boxrule=0pt, enhanced, frame hidden, interior hidden, sharp corners, borderline west={3pt}{0pt}{shadecolor}]}{\end{tcolorbox}}\fi
+\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[borderline west={3pt}{0pt}{shadecolor}, interior hidden, boxrule=0pt, enhanced, sharp corners, breakable, frame hidden]}{\end{tcolorbox}}\fi
 \makeatother
 \usepackage{bookmark}
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
@@ -334,8 +334,8 @@ las variables estén en el tipo de dato correcto.
 \begin{verbatim}
 [PASO 1] Calculando salarios en USD con TC individual...
 
-    * 927 registros con TC reportado individual
-    * TC mediano de la encuesta: $1,060.00
+    - 927 registros con TC reportado individual
+    - TC mediano de la encuesta: $1,060.00
     - 4269 registros usando TC mediano
 
 Dataset preparado: (5196, 53)
@@ -791,8 +791,8 @@ Si los intervalos NO se solapan, hay evidencia adicional de diferencia real.
 Generando 10,000 muestras bootstrap...Completado
 
 [INTERVALOS DE CONFIANZA 95%]
-Contractors: [$2,452.83, $2,877.36] USD
-Staff:       [$2,094.34, $2,208.49] USD
+Contractors: [$2,452.83, $2,880.00] USD
+Staff:       [$2,094.34, $2,208.02] USD
 
 --------------------------------------------------------------------------------
 Los intervalos NO se solapan
@@ -827,7 +827,7 @@ RESULTADOS DE LAS PRUEBAS:
       → Diferencia SIGNIFICATIVA
 
 2. INTERVALOS DE CONFIANZA 95%:
-   - Contractors: [$2,453, $2,877] USD
+   - Contractors: [$2,453, $2,880] USD
    - Staff: [$2,094, $2,208] USD
    - Solapamiento: NO
       → Confirma diferencia significativa
